# PIXORA

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/v1/: auth.py  jobs.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py
backend/app/models/: artifact.py  job.py  job_log.py  user.py
backend/app/schemas/: job.py  user.py
backend/app/services/: mesh_utils.py  multiview.py  orchestrator.py  preprocess.py  reconstruction.py  textures.py
backend/app/tests/: conftest.py  test_jobs.py
backend/app/utils/: storage.py
backend/app/workers/: celery_worker.py  tasks.py
backend/scripts/: start_backend.ps1
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/components/viewer/: ExportPanel.tsx  InfoPanel.tsx  ViewerControls.tsx  ViewerToolbar.tsx
src/integrations/supabase/: types.ts
src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  Preview.tsx  Register.tsx
src/types/: viewer.ts
src/utils/viewer/: depthMapGenerator.ts  exporters.ts  geometryUtils.ts  lighting.ts  modes.ts
supabase/: config.toml
supabase/migrations/: 20251123100212_6cb529b9-6b3a-472d-b71a-088cad4a20fb.sql
